[gd_scene load_steps=4 format=3 uid="uid://dmy3y3edc4ks2"]

[ext_resource type="Script" uid="uid://d2pbfym6hli17" path="res://scenes/asteroid.gd" id="1_6mo6b"]
[ext_resource type="Texture2D" uid="uid://cidqk5v0k6ple" path="res://sprites/Asteroide1.png" id="1_akfqu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6mo6b"]
radius = 45.0111

[node name="Asteroid" type="Area2D" groups=["asteroids"]]
position = Vector2(681, 148)
collision_layer = 8
collision_mask = 2
script = ExtResource("1_6mo6b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_akfqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6mo6b")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="TimerDelete" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerDelete" to="." method="_on_timer_delete_timeout"]
